--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+alabaster==0.7.9
+Babel==2.3.4
 backports.shutil-get-terminal-size==1.0.0
 cycler==0.10.0
 decorator==4.0.10
+docutils==0.12
 enum34==1.1.6
 hunspell==0.4.1
+imagesize==0.7.1
 ipython==5.1.0
 ipython-genutils==0.1.0
+Jinja2==2.8
+MarkupSafe==0.23
 matplotlib==1.5.3
 mpmath==0.19
 nltk==3.2.1
@@ -16,6 +22,7 @@ pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.7
 ptyprocess==0.5.1
+pycorenlp==0.3.0
 Pygments==2.1.3
 pyparsing==2.1.10
 python-dateutil==2.5.3
@@ -25,6 +32,7 @@ roman==2.0.0
 scipy==0.18.1
 simplegeneric==0.8.1
 six==1.10.0
+snowballstemmer==1.2.1
 sympy==1.0
 traitlets==4.3.1
 treetaggerwrapper==2.2.4
