--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 alabaster==0.7.9
 Babel==2.3.4
 backports.shutil-get-terminal-size==1.0.0
+boto==2.43.0
+bz2file==0.98
 cycler==0.10.0
+Cython==0.25.1
 decorator==4.0.10
 docutils==0.12
 enum34==1.1.6
+gensim==0.13.3
 hunspell==0.4.1
 imagesize==0.7.1
 ipython==5.1.0
@@ -27,13 +31,15 @@ Pygments==2.1.3
 pyparsing==2.1.10
 python-dateutil==2.5.3
 pytz==2016.7
-requests==2.11.1
+requests==2.12.2
 roman==2.0.0
 scipy==0.18.1
 simplegeneric==0.8.1
 six==1.10.0
+smart-open==1.3.5
 snowballstemmer==1.2.1
 sympy==1.0
 traitlets==4.3.1
 treetaggerwrapper==2.2.4
 wcwidth==0.1.7
+word2vec==0.9.1
