--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ mpmath==0.19
 nltk==3.2.1
 nose==1.3.7
 numpy==1.11.2
-pandas==0.19.0
+pandas==0.19.1
 pathlib2==2.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
@@ -31,9 +31,10 @@ Pygments==2.1.3
 pyparsing==2.1.10
 python-dateutil==2.5.3
 pytz==2016.7
-requests==2.12.2
+requests==2.11.1
 roman==2.0.0
 scipy==0.18.1
+seaborn==0.7.1
 simplegeneric==0.8.1
 six==1.10.0
 smart-open==1.3.5
