--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,45 @@
 alabaster==0.7.9
 Babel==2.3.4
+backports-abc==0.5
 backports.shutil-get-terminal-size==1.0.0
+bleach==1.5.0
 boto==2.43.0
 bz2file==0.98
+certifi==2016.9.26
+configparser==3.5.0
 cycler==0.10.0
 Cython==0.25.1
 decorator==4.0.10
 docutils==0.12
+entrypoints==0.2.2
 enum34==1.1.6
+functools32==3.2.3.post2
 gensim==0.13.3
+html5lib==0.9999999
 hunspell==0.4.1
 imagesize==0.7.1
+ipykernel==4.5.2
 ipython==5.1.0
 ipython-genutils==0.1.0
+ipywidgets==5.2.2
 Jinja2==2.8
+jsonschema==2.5.1
+jupyter-client==4.4.0
+jupyter-core==4.2.1
 MarkupSafe==0.23
 matplotlib==1.5.3
+mistune==0.7.3
 mpmath==0.19
+nbconvert==5.0.0
+nbformat==4.2.0
 nltk==3.2.1
 nose==1.3.7
+notebook==4.3.1
 numpy==1.11.2
 pandas==0.19.1
+pandocfilters==1.4.1
 pathlib2==2.1.0
+Pattern==2.6
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.7
@@ -29,18 +47,25 @@ ptyprocess==0.5.1
 pycorenlp==0.3.0
 Pygments==2.1.3
 pyparsing==2.1.10
+python-cjson==1.1.0
 python-dateutil==2.5.3
 pytz==2016.7
+pyzmq==16.0.2
 requests==2.11.1
 roman==2.0.0
 scipy==0.18.1
 seaborn==0.7.1
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
 smart-open==1.3.5
 snowballstemmer==1.2.1
 sympy==1.0
+terminado==0.6
+testpath==0.3
+tornado==4.4.2
 traitlets==4.3.1
 treetaggerwrapper==2.2.4
 wcwidth==0.1.7
+widgetsnbextension==1.2.6
 word2vec==0.9.1
